--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,11 @@
 <div class="body">
-  <app-header-home></app-header-home>
-  <app-navbar></app-navbar>
 
   <div class="container-fuild">
-    
+
     <div class="container-fuild background-img div-center row" style="width: 100%;padding: 20px;">
 
       <div class="col-12 col-xl-4">
-        <div style="background-color: #d9d9d9;width: fit-content;border-radius: 5px;">        
+        <div style="background-color: #d9d9d9;width: fit-content;border-radius: 5px;">
           <h1 style="color: #146c94;font-size: 32px;font-weight:bold;">ĐI XA HƠN <br> CHẠM TỚI ƯỚC MƠ</h1>
         </div>
         <div style="background-color: #146c94;width: fit-content;border-radius: 5px;">
@@ -17,10 +15,11 @@
       <div class="col-12 col-xl-5">
         <form class="d-flex row">
           <input class="form-control me-2 input-date " type="date" name="date_flight" value="">
-          <div  style="display: flex;flex-direction: row;justify-content: space-between;align-items: center;">
-            
-            <input class="form-control me-2 input-sreach col-1" type="search" placeholder="NƠI CẦN ĐẾN" aria-label="Search" name="date_flight" value="">
-          <button class="btn btn-outline-success btn-sreach col-1" type="submit">TÌM</button>
+          <div style="display: flex;flex-direction: row;justify-content: space-between;align-items: center;">
+
+            <input class="form-control me-2 input-sreach col-1" type="search" placeholder="NƠI CẦN ĐẾN"
+              aria-label="Search" name="date_flight" value="">
+            <button class="btn btn-outline-success btn-sreach col-1" type="submit">TÌM</button>
           </div>
         </form>
 
@@ -32,21 +31,13 @@
         <div class="row gy-5 justify-content-between">
           <div class="col-12 col-xl-5 margin-top div-box-have div-center-row">
             <div>
-              <img
-                src="assets/img/sale-discount.png"
-                alt="sales"
-                width="110px"
-              />
+              <img src="assets/img/sale-discount.png" alt="sales" width="110px" />
             </div>
             <div class="p-3 text-title">KHUYẾN MÃI, GIÁ SỐC MỖI NGÀY</div>
           </div>
           <div class="col-12 col-xl-5 margin-top div-box-have div-center-row">
             <div>
-              <img
-                src="assets/img/suport-hotline.png"
-                alt="hotline"
-                width="130px"
-              />
+              <img src="assets/img/suport-hotline.png" alt="hotline" width="130px" />
             </div>
             <div class="p-3 text-title">
               TỔNG ĐÀI HỖ TRỢ MỌI LÚC, MỌI NƠI 24/7
@@ -80,7 +71,8 @@
               <img src="assets/img/Screenshot 2023-10-19 223531.png" alt="img" width="300px" />
             </div>
           </div>
-          <div class="col-12 col-xl-8 margin-top" style="border: 2px solid #146c94; border-radius: 20px;overflow: hidden;">
+          <div class="col-12 col-xl-8 margin-top"
+            style="border: 2px solid #146c94; border-radius: 20px;overflow: hidden;">
             <div id="carouselExample1" class="carousel" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active " data-bs-interval="3000">
@@ -108,11 +100,13 @@
                   <img src="../../../assets/img/singapore.png" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1"
+                data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1" data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1"
+                data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
@@ -125,41 +119,44 @@
       <h1 class="font-title">ĐẾN</h1>
       <div class="container overflow-hidden text-center">
         <div class="row gy-5 justify-content-evenly">
-          <div class="col-12 col-xl-8 margin-top " style="border: 2px solid #146c94; border-radius: 20px;overflow: hidden;">
-            <div id="carouselExample2" class="carousel" data-bs-ride="carousel" >
+          <div class="col-12 col-xl-8 margin-top "
+            style="border: 2px solid #146c94; border-radius: 20px;overflow: hidden;">
+            <div id="carouselExample2" class="carousel" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item"data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="../../../assets/img/usa.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item"data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="../../../assets/img/london.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item"data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="../../../assets/img/thailand.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item"data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="../../../assets/img/singapore.png" class="d-block w-100" alt="...">
                 </div>
 
                 <div class="carousel-item active" data-bs-interval="3000">
                   <img src="../../../assets/img/vietnam.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item"data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="../../../assets/img/hongkong.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item"data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="../../../assets/img/australia .png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item"data-bs-interval="3000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="../../../assets/img/paris.png" class="d-block w-100" alt="...">
                 </div>
 
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2"
+                data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2"
+                data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
@@ -167,7 +164,7 @@
           </div>
           <div class="col-12 col-xl-4 margin-top div-center">
             <div class="p-3 div-center" style="width: fit-content;margin-left: 90px;">
-              <img src="assets/img/Screenshot 2023-10-19 223629.png" alt="img" width="300px"/>
+              <img src="assets/img/Screenshot 2023-10-19 223629.png" alt="img" width="300px" />
             </div>
           </div>
         </div>
@@ -175,12 +172,9 @@
     </div>
     <section class="margin" id="aboutus">
       <h1 class="font-title">VỀ CHÚNG TÔI:</h1>
-      <p >Giới thiệu ngắn</p>
+      <p>Giới thiệu ngắn</p>
     </section>
-    <div
-      class="div-center margin row accordion-border"
-      style="background-color: #d9d9d9"
-    >
+    <div class="div-center margin row accordion-border" style="background-color: #d9d9d9">
       <div class="col-12 col-xl-3" style="height: 50px; padding: 10px">
         <h2 style="color: #146c94">FAQ về Booking:</h2>
       </div>
@@ -188,22 +182,12 @@
         <div class="accordion accordion-flush" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseOne"
-                aria-expanded="false"
-                aria-controls="collapseOne"
-              >
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                 Tại sao lại chọn FLIGHTDOT ?
               </button>
             </h2>
-            <div
-              id="collapseOne"
-              class="accordion-collapse collapse"
-              data-bs-parent="#accordionExample"
-            >
+            <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>This is the first item's accordion body.</strong> It is
                 shown by default, until the collapse plugin adds the appropriate
@@ -219,23 +203,12 @@
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseTwo"
-                aria-expanded="false"
-                aria-controls="collapseTwo"
-                
-              >
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 Cách thức đặt vé máy bay
               </button>
             </h2>
-            <div
-              id="collapseTwo"
-              class="accordion-collapse collapse"
-              data-bs-parent="#accordionExample"
-            >
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>This is the second item's accordion body.</strong> It is
                 hidden by default, until the collapse plugin adds the
@@ -251,22 +224,12 @@
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseThree"
-                aria-expanded="false"
-                aria-controls="collapseThree"
-              >
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 Với dịch vụ chúng tôi có thể làm gì
               </button>
             </h2>
-            <div
-              id="collapseThree"
-              class="accordion-collapse collapse"
-              data-bs-parent="#accordionExample"
-            >
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>This is the third item's accordion body.</strong> It is
                 hidden by default, until the collapse plugin adds the
@@ -282,22 +245,12 @@
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseFour"
-                aria-expanded="false"
-                aria-controls="collapseFour"
-              >
-               Giải quyết thắc mắc và sự cố:
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                Giải quyết thắc mắc và sự cố:
               </button>
             </h2>
-            <div
-              id="collapseFour"
-              class="accordion-collapse collapse"
-              data-bs-parent="#accordionExample"
-            >
+            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>This is the third item's accordion body.</strong> It is
                 hidden by default, until the collapse plugin adds the
@@ -316,16 +269,16 @@
     </div>
     <div class="div-center margin-bottom" style="height: 250px;">
       <div class="div-contact row">
-        <div class="col-4 div-center" >
+        <div class="col-4 div-center">
           <img src="assets/img/ticket.png" alt=".." width="100px">
         </div>
         <div class="col-8 div-center">
           <div class="rotatingText div-center" style="margin-right: 30px;">
             <div class="rotatingText-content">
               <p class="rotatingText-description">
-                Đặt vé ngay với Hotline: 1021 4333 hoặc chọn đặt vé ngay để hưởng nhiều                    &hellip;
+                Đặt vé ngay với Hotline: 1021 4333 hoặc chọn đặt vé ngay để hưởng nhiều &hellip;
               </p>
-          
+
               <h4 class="rotatingText-adjective">Ưu đãi</h4>
               <h4 class="rotatingText-adjective">Nhiệt tình</h4>
               <h4 class="rotatingText-adjective">Quyền lợi</h4>
@@ -337,5 +290,4 @@
       </div>
     </div>
   </div>
-  <app-footer></app-footer>
 </div>
