--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!-- <app-booking-history></app-booking-history> -->
+
+<app-header></app-header>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
