--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,43 +1,32 @@
-
-<nav
-  class="navbar sticky-top navbar-expand-lg navbar-dark bg-light bg-color container-fluid bg-body-tertiary"
-  
->
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light bg-color container-fluid bg-body-tertiary">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1">THỰC HIỆN ƯỚC MƠ</span>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav" style="color: white">
         <li class="nav-item" style="color: white !important">
-          <a class="nav-link text-color actived"  routerLink="/home">
+          <a class="nav-link text-color actived" routerLink="/home">
             Trang chủ</a>
         </li>
         <li class="nav-item" style="color: white !important">
-          <a class="nav-link text-color"  routerLink="/booking-history">
+          <a class="nav-link text-color" routerLink="/booking-history">
             Lịch sử vé</a>
         </li>
         <li class="nav-item" style="color: white">
-          <a class="nav-link text-color"  routerLink="/booking-ticket">
+          <a class="nav-link text-color" routerLink="/booking/booking-ticket">
             Chuyến bay</a>
         </li>
         <li class="nav-item" style="color: white !important">
-          <a class="nav-link text-color"  routerLink="/admin-dashboard/admin-flight-management">
+          <a class="nav-link text-color" routerLink="/admin-dashboard/admin-flight-management">
             Admin</a>
         </li>
         <li class="nav-item dropdown ">
-          <a
-            class="nav-link dropdown-toggle text-color"
-            routerLink="."
-            id="navbarDropdownMenuLink"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            style="font-size: 16px;"
-            
-          >
-            
+          <a class="nav-link dropdown-toggle text-color" routerLink="." id="navbarDropdownMenuLink" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 16px;">
+
             Tài khoản
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -46,27 +35,20 @@
             <li><a class="dropdown-item" routerLink="/login">Đăng xuất</a></li>
           </ul>
         </li>
-        
+
       </ul>
       <span class="example-spacer"></span>
-        <div class="" style=" margin-top: 5px;margin-bottom: 5px;">
-          <a class="btn-signUp" mat-fab extended routerLink="/sign-up">
-            <mat-icon>person_add</mat-icon>
-            Sign Up
-          </a>
-          
-          <a
-            class="btn-login"
-            matTooltip="Link"
-            mat-fab
-            extended
-            routerLink="/login"
-          >
-            <mat-icon>login</mat-icon>
-            Login
-          </a>
-        </div>
+      <div class="" style=" margin-top: 5px;margin-bottom: 5px;">
+        <a class="btn-signUp" mat-fab extended routerLink="/sign-up">
+          <mat-icon>person_add</mat-icon>
+          Sign Up
+        </a>
+
+        <a class="btn-login" matTooltip="Link" mat-fab extended routerLink="/login">
+          <mat-icon>login</mat-icon>
+          Login
+        </a>
+      </div>
     </div>
   </div>
 </nav>
-
