--- a/src/app/pages/add-flight/add-flight.component.html
+++ b/src/app/pages/add-flight/add-flight.component.html
@@ -36,6 +36,7 @@
                     <option value="RUSSIA" id="RU">Nga</option>
                     <option value="SINGAPORE" id="SG">Singapore</option>
                     <option value="HONGKONG" id="HK">Hồng Kông</option>
+                    <option value="KOREA" id="KR">Hàn Quốc</option>
                 </select>
             </div>
     
@@ -54,6 +55,7 @@
                     <option value="RUSSIA" id="RU">Nga</option>
                     <option value="SINGAPORE" id="SG">Singapore</option>
                     <option value="HONGKONG" id="HK">Hồng Kông</option>
+                    <option value="KOREA" id="KR">Hàn Quốc</option>
                 </select>
             </div>
     
@@ -73,7 +75,11 @@
                 }"
                 style="width: 20%;"
                 [(ngModel)]="flightTime_Hour">
-                
+                <span style="width: 10%;
+                align-self: center;
+    color: #146C94;
+    font-weight: bold;
+    text-align: center">giờ</span>
                 <input type="number" id="flight-time-minute" name="flight-time-minute" min="0" max="59"
                 oninput="this.value = !!this.value && Math.abs(this.value) <= 59 ? Math.abs(this.value) : null;
                 if (this.value < 10) {
@@ -81,14 +87,18 @@
                 }"
                 style="width: 20%;"
                 [(ngModel)]="flightTime_Minute">
-                
-                <input type="number" id="flight-time-second" name="flight-time-second" min="0" max="59"
+                <span style="width: 10%;
+                align-self: center;
+    color: #146C94;
+    font-weight: bold;
+    text-align: center">phút</span>
+                <!-- <input type="number" id="flight-time-second" name="flight-time-second" min="0" max="59"
                 oninput="this.value = !!this.value && Math.abs(this.value) <= 59 ? Math.abs(this.value) : null;
                 if (this.value < 10) {
                     this.value = '0' + this.value
                 }"
                 style="width: 20%;"
-                [(ngModel)]="flightTime_Second">
+                [(ngModel)]="flightTime_Second"> -->
             </div>
         </div>
 
