--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -39,6 +39,7 @@
         <option value="RUSSIA" id="RU">Nga</option>
         <option value="SINGAPORE" id="SG">Singapore</option>
         <option value="HONGKONG" id="HK">Hồng Kông</option>
+        <option value="KOREA" id="KR">Hàn Quốc</option>
       </select>
     </div>
     <div class="form-field" style="justify-content: right;">
